--- a/src/admin-user/common/side-bar/data/SideBar.css
+++ b/src/admin-user/common/side-bar/data/SideBar.css
@@ -1,20 +1,34 @@
 .container{
     width: 16%;
     min-height: 100vh;
-    background-color: brown;
+    background-color: white;
+    box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3);
 
     
 
 }
 
 
+.logo{
+    padding-left: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 .side-bar{
     margin-top: 0;
     width: 100%;
+    padding: 15px 15px 15px 40px;
+    display: flex;
 }
 
-/* .inner-element .side-bar a{
+.inner-element .side-bar a{
+    text-decoration: none;
+    color: #838383;
+    font-family: inter;
+}
+
+.new{
     display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+    gap: 10px;
+}
