--- a/src/admin-user/dashboard/dashboard.css
+++ b/src/admin-user/dashboard/dashboard.css
@@ -1,3 +1,7 @@
 .dashboard-container{
-    width: 64%;
+    width: 60%;
+    height: 400px;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px rgba(136, 136, 136, 0.3);
+    
 }
