--- a/src/admin-user/layout/Layout.css
+++ b/src/admin-user/layout/Layout.css
@@ -1,6 +1,6 @@
 .layout-container{
     width: 100%;
-    /* background-color: blue; */
+    background-color: white;
     min-height: 100vh;
     display: flex;
     justify-content: space-between;
