--- a/src/admin-user/common/right-bar/Rightside.css
+++ b/src/admin-user/common/right-bar/Rightside.css
@@ -1,6 +1,7 @@
 .right-side-container{
-    width: 20%;
+    width: 27%;
     min-height: 100vh;
     background-color: white;
+    color: black;
     box-shadow: 1px 1px 1px 1px rgba(66, 64, 64, 0.6);
 }
