--- a/src/admin-user/dashboard/Dashboard.css
+++ b/src/admin-user/dashboard/Dashboard.css
@@ -1,7 +1,8 @@
 .dashboard-container{
-    width: 60%;
-    height: 500px;
+    width: 53%;
+    /* min-height: 100vh; */
     background-color: white;
-    box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3);
+    /* box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3); */
 
 }
+
