--- a/src/admin-user/collections/cardone/cardtwo/CardTwo.css
+++ b/src/admin-user/collections/cardone/cardtwo/CardTwo.css
@@ -48,9 +48,9 @@
   margin-top: 8px;
   padding: 10px;
   border: none;
-  /* background: black; */
-  color: blue;
-  border: 1px solid blue;
+  background: white;
+  color: #679FD2;
+  border: 1px solid #679FD2;;
   border-radius: 8px;
   cursor: pointer;
   font-size: 12px;
@@ -62,7 +62,7 @@
 
 .cards-title {
   font-size: 16px;
-  color: blue;
+  color: #679FD2;
   /* font-weight: 600; */
   /* margin-bottom: 15px; */
 }
