--- a/src/admin-user/common/right-bar/Rightside.css
+++ b/src/admin-user/common/right-bar/Rightside.css
@@ -4,4 +4,197 @@
     background-color: white;
     color: black;
     box-shadow: 1px 1px 1px 1px rgba(66, 64, 64, 0.6);
+
 }
+
+
+.cart-container {
+  width: 90%;
+  max-width: 420px;
+  margin: 0 auto;
+  padding: 13px;
+}
+
+
+.cart-logo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.mainCart{
+    width: 20px;
+    height: 20px;
+}
+
+.cart-container h3 {
+  margin-bottom: 15px;
+  color: #222;
+  font-size: 12px;
+}
+
+.cart-item {
+  display: flex;
+  gap: 15px;
+  background: #ffffff;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  margin-bottom: 20px;
+}
+
+.cart-img {
+  width: 90px;
+  height: 90px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.cart-details {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.item-title {
+  font-size: 13px;
+  font-weight: 200;
+  margin-bottom: 8px;
+  color: #444;
+}
+
+.qty-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* gap: 10px; */
+  margin-bottom: 10px;
+}
+
+.qty-btn {
+  width: 28px;
+  height: 28px;
+  border-radius: 6px;
+  border: 1px solid #bcd6ff;
+  background: #e8f1ff;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #1d74f5;
+}
+
+.qty-number {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.remove-btn {
+  color: white;
+  padding: 6px 12px;
+  border: none;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 200;
+  background: #FF8E8E;
+border-radius: 4px;
+margin-top: 4px;
+}
+
+.checkout-btn {
+  width: 100%;
+  background: #679FD2;
+border-radius: 4px;
+  color: white;
+  padding: 12px;
+
+  border: none;
+  cursor: pointer;
+  font-weight: 500px;
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+.below-cloth{
+    width: 80%;
+    margin-top: 30px;
+}
+
+.advert-text{
+    width: 100%;
+    /* background-color: blue; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 13px;
+    margin-top: 40px;
+}
+
+.advert-text .advert{
+    font-size: 12px;
+   
+}
+
+.grouped-images{
+    width: 60%;
+}
+
+.grouped-images .img-one{
+    width: 252px;
+    height: 80px;
+    border-radius: 4px;
+    /* background-color: #1d74f5; */
+    padding-bottom: 10px;
+    padding-left: 30px;
+}
+
+.grouped-images .img-two{
+    width: 260px;
+    height: 80px;
+    border-radius: 4px;
+    /* background-color: #1d74f5; */
+    /* margin-bottom: 5px; */
+    /* padding-left: 30px; */
+    /* background-color: #1d74f5; */
+    position: absolute;
+    top: 369px;
+    right: 60px;
+    
+}
+
+.grouped-images .img-three{
+    width: 280px;
+    height: 80px;
+    border-radius: 4px;
+    /* background-color: #1d74f5; */
+    position: absolute;
+    top: 442px;
+    right: 50px;
+    z-index: 1;
+    
+} 
+
+
+.grouped-images .img-four{
+    width: 260px;
+    height: 80px;
+    border-radius: 4px;
+    /* background-color: #1d74f5; */
+    position: absolute;
+    top: 475px;
+    right: 60px;
+    
+} 
+
+
+.grouped-images .img-five{
+    width: 252px;
+    height: 80px;
+    border-radius: 4px;
+    /* background-color: #968a8d; */
+    position: absolute;
+    top: 540px;
+    right: 65px;
+    
+} 
