--- a/src/admin-user/add-cart-details/AddCardDetails.css
+++ b/src/admin-user/add-cart-details/AddCardDetails.css
@@ -1,9 +1,6 @@
-.dashboard-container{
-    width: 90%;
-    
+.product-details{
+    width: 100%;
     /* min-height: 100vh; */
-    /* background-color: white; */
+    background-color: white;
     /* box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3); */
-
 }
-
