--- a/src/admin-user/common/side-bar/data/SideBar.css
+++ b/src/admin-user/common/side-bar/data/SideBar.css
@@ -1,8 +1,9 @@
 .container{
     width: 16%;
     min-height: 100vh;
-    background-color: white;
-    box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3);
+    background-color: rgb(241, 143, 143);
+    box-shadow: 1px 1px 1px black;
+    margin-right: 2px;
 
     
 
