my first commit

--- a/src/admin-user/dashboard/Dashboard.css
+++ b/src/admin-user/dashboard/Dashboard.css
@@ -1,5 +1,6 @@
 .dashboard-container{
     width: 100%;
+    background-color: black;
     
     /* min-height: 100vh; */
     /* background-color: white; */
