--- a/src/admin-user/add-cart-details/AddCardDetails.css
+++ b/src/admin-user/add-cart-details/AddCardDetails.css
@@ -4,3 +4,29 @@
     background-color: white;
     /* box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3); */
 }
+
+.colorful{
+    display: flex;
+    gap: 5px;
+    margin-top: 20px;
+    /* font-size: 20px; */
+    /* font-weight: 400; */
+}
+
+.product-details .wrap{
+    width: 95%;
+    height: auto;
+    /* background-color: blue; */
+    margin-top: 20px;
+    margin-left: 15px;
+    /* background: #fff; */
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  
+}
+
+.wrap .product-img-wrapper .product-img{
+    width: 100%;
+    height: auto;
+}
