--- a/src/admin-user/collections/cardone/cardtwo/CardTwo.css
+++ b/src/admin-user/collections/cardone/cardtwo/CardTwo.css
@@ -4,7 +4,7 @@
   gap: 20px;                              
   /* padding: 20px; */
   margin-top: 5px;
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 /* .cards-container {
