--- a/src/admin-user/common/right-bar/Rightside.css
+++ b/src/admin-user/common/right-bar/Rightside.css
@@ -1,7 +1,7 @@
 .right-side-container{
     width: 28%;
     min-height: 100vh;
-    background-color: rgb(97, 7, 7);
+    /* background-color: rgb(97, 7, 7); */
     color: black;
     box-shadow: 1px 1px 1px 1px rgba(66, 64, 64, 0.6);
     
