--- a/src/admin-user/dashboard/Dashboard.css
+++ b/src/admin-user/dashboard/Dashboard.css
@@ -1,6 +1,6 @@
 .dashboard-container{
     width: 100%;
-    background-color: black;
+    background-color: white;
     
     /* min-height: 100vh; */
     /* background-color: white; */
