--- a/src/admin-user/distribution/Distribution.css
+++ b/src/admin-user/distribution/Distribution.css
@@ -1,5 +1,5 @@
-.distribution-container'{
-    width: 53%;
+.distribution-container{
+    width: 100%;
     /* min-height: 100vh; */
     background-color: white;
     /* box-shadow: 1px 1px 1px rgba(136, 136, 136, 0.3); */
