--- a/src/admin-user/corrected-layout/CorrectedLayout.css
+++ b/src/admin-user/corrected-layout/CorrectedLayout.css
@@ -12,6 +12,6 @@
   flex: 1;
   padding: 20px;
   background-color: white;
-  width: 55%;
-  background-color: brown;
+  width: 57%;
+  /* background-color: brown; */
 }
