--- a/src/admin-user/common/nav-top/NavTop.css
+++ b/src/admin-user/common/nav-top/NavTop.css
@@ -16,13 +16,15 @@
 } */
 
 .greeting {
-  font-size: 16px;
+  font-family: Lato;
+  font-weight: 500;
+  font-size: 15px;
   color: #000;
 }
 
 .username {
   color: #679FD2;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .bell {
@@ -56,6 +58,8 @@
 
 .search-box input::placeholder {
    font-size: 10px;
+  font-family: Inter;
+  font-weight: 400;
   /* color: #3793ff; */
 }
 
@@ -66,7 +70,9 @@
   color: white;
   /* border-radius: 8px; */
   cursor: pointer;
-  font-size: 15px;
+  font-size: 16px;
+  font-family: Poppins;
+  font-weight: 500;
 background: linear-gradient(90.91deg, #2972B5 0.28%, #90E0FC 111.21%), #C4C4C4;
 border-radius: 6px;
 
