--- a/src/admin-user/common/right-bar/Rightside.css
+++ b/src/admin-user/common/right-bar/Rightside.css
@@ -4,6 +4,7 @@
     /* background-color: rgb(97, 7, 7); */
     color: black;
     box-shadow: 1px 1px 1px 1px rgba(66, 64, 64, 0.6);
+    margin-top: 20px;
     
 
 }
@@ -32,7 +33,9 @@
 .cart-container h3 {
   margin-bottom: 15px;
   color: #222;
-  font-size: 12px;
+  font-size: 14px;
+  font-family: Lato;
+  font-weight: 500;
 }
 
 .cart-item {
@@ -60,10 +63,11 @@
 }
 
 .item-title {
-  font-size: 13px;
-  font-weight: 200;
+  font-family: 500;
+  font-size: 15px;
+  font-weight: 500;
   margin-bottom: 8px;
-  color: #444;
+  color: #000;
 }
 
 .qty-box {
@@ -97,7 +101,8 @@
   border: none;
   cursor: pointer;
   font-size: 12px;
-  font-weight: 200;
+  font-weight: 700;
+  font-family: Lato;
   background: #FF8E8E;
 border-radius: 4px;
 margin-top: 4px;
@@ -115,6 +120,7 @@ border-radius: 4px;
   font-weight: 500px;
   margin-top: 10px;
   font-size: 12px;
+  font-family: Lato;
 }
 
 .below-cloth{
@@ -203,3 +209,22 @@ border-radius: 4px;
     right: 65px;
     
 } 
+
+.num{
+  position: absolute;
+width: 9px;
+height: 22px;
+left: 1308px;
+top: 22px;
+
+font-family: 'Lato';
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 146.69%;
+/* identical to box height, or 22px */
+display: flex;
+align-items: center;
+
+color: #FFFFFF;
+}
