--- a/src/admin-user/add-cart-details/AddCardDetails.css
+++ b/src/admin-user/add-cart-details/AddCardDetails.css
@@ -146,7 +146,7 @@
     margin-top: 35px;
     padding: 5px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1)
 }
 
 .wrap .product-img-wrapper .product-img {
