my first commit

--- a/src/admin-user/common/right-bar/Rightside.css
+++ b/src/admin-user/common/right-bar/Rightside.css
@@ -253,7 +253,7 @@
     }
 
 
-    /* FIX: Increased Image Size (50vw) and Centering */
+    /* i fixed the Image Size (50vw) and Centering */
     .grouped-images .img-one,
     .grouped-images .img-two,
     .grouped-images .img-three,
